[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdmtb"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Rui Hirokawa", email = "rui.hirokawa@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Rui Hirokawa/cdmtb#readme"
Issues = "https://github.com/Rui Hirokawa/cdmtb/issues"
Source = "https://github.com/Rui Hirokawa/cdmtb"

[tool.hatch.version]
path = "src/cdmtb/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cdmtb tests}"

[tool.coverage.run]
source_pkgs = ["cdmtb", "tests"]
branch = true
parallel = true
omit = [
  "src/cdmtb/__about__.py",
]

[tool.coverage.paths]
cdmtb = ["src/cdmtb", "*/cdmtb/src/cdmtb"]
tests = ["tests", "*/cdmtb/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
